[UPD] done price calculation • Fine esercizio

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Biglietto Treno</title>
 </head>
 <body>
+    <h1>Calcola il prezzo del tuo Biblietto</h1>
+    <p id="prezzo-biglietto"></p>
 
 
 
